# PAT

./: .gitignore  CMakeLists.txt  README.md  test 4.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test25.cpp  test27.cpp  test28.cpp  test29.cpp  test3.cpp  test31.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
